htdocs/theme/raw/sass/typography/_typography.scss
// Basic type related customisation


body, p {
    font-weight: 400;
}

h1 {
    @extend .page-header;
    .admin & {
        text-shadow: 1px 1px 0 rgba(#fff, 0.5);
        color: #555;
        border-bottom-color: #ddd;
    }

    .page-header & {
        border-bottom:0;
    }
}

// Add padding if there is no navigation
.header + .container h1 {
    padding-top: 20px;
}

.page-header {
    margin-bottom:20px;
    ~ .with-heading {
        margin-top: -16px;
        @media (max-width: $screen-xs-min) {
            margin-top: 0;
        }
    }
    ~ form.with-heading,
    ~ form .with-heading,
    ~ .form.with-heading {
        @include border-bottom-radius(3px);
        background-color: #f7f7f7;
        padding: 20px 10px 10px 10px;
        margin-top: -20px;
        border-bottom: 1px solid #eee;
        &.invite-friend {
            padding-bottom: 5px;
        }
        @media (max-width: $screen-xs-min) {
            margin-top: 5px;
        }
        @media (max-width: $screen-sm-min) {
            padding: 10px;
            > .input-group {
                padding-top: 10px;
            }
        }
        .admin & {
            background-color: #fcfcfc;
            border-color: #ddd;
            border-left: 1px solid #eee;
            border-right: 1px solid #eee;
        }
        ~ form.with-heading {
            padding-top: 0;
            margin-top: -1px;
            max-width: 100%;
        }
        .form-group {
            .select2 {
                max-width: 100%;
            }
        }
    }
    ~ div.with-heading {
        padding-bottom: 10px;
        margin-bottom: 10px;
        @media (max-width: $screen-xs-min) {
            border-bottom: 1px solid #eee;
        }
        a {
            margin-right: 5px;
        }
    }
    &.user-icon-name {
        border-bottom-color: #f0f0f0;
    }
}

.page-header,
h1, h2 {
    margin-top:0;
}

h4 {
    margin-bottom: 5px;
}

h2 {

    font-weight:300;
}

h2, h3, h4, h5, legend {
    &.panel-heading {
        margin: 0;
        font-size: 16px;
    }
    &.no-margin {
        margin: 0;
    }
}

.subsection-heading +  .section-heading {
    color: $section-heading-color;
}

strong i {
    font-style: normal; // #tasteful
}

a {
    &.link-block {
        display: block;
    }
    &:focus,
    &:hover {
        text-decoration-color: #aaa;
        outline-color: rgba($input-border-focus, 0.3);
        .text-orange {
            color: $link-color;
        }
    }
}

.list-unstyled:not(.list-group) {
    li {
        padding-bottom: 5px;
    }
}

.link-unstyled {
    color: #333;
    &:hover {
        text-decoration: none;
        color: inherit;
    }
}

// Styles for links at the bottom of blocktype
// ie. add comment link and artefact detail link
.link-blocktype {
    .col-width-100 &,
    .col-width-50 & {
        padding: 5px 8px;
        @media (min-width: $screen-sm-min) {
            padding: 5px 20px;
        }
    }
    font-size: $font-size-base - 1;
    float: left;
    margin: 10px 0;
    padding: 5px 7px;
    &:hover {
        background-color: $btn-default-bg;
        text-decoration: none;
    }
    .icon {
        display: none;
        @media (min-width: $screen-xs-min) {
            display: inline-block;
        }
    }
}

img {
    max-width: 100%;
    &.artefact-img {
        margin-right: 10px;
    }
    &.file-icon {
        margin-right: 5px;
    }
}

hr {
    margin-top: $line-height-computed / 2;
}

ul {
    &.unstyled.unstyled { //increase the importance
        padding: 0;
        margin: 0;
        list-style-type: none;
    }
}

blockquote {
    margin-top: 20px;
    margin-bottom: 30px;
    &.small {
        font-size: $font-size-base;
    }
    .text-small &{
        font-size: $font-size-base;
    }
}

.lead,
.lead p {
    font-size: floor(($font-size-base * 1.10));
    font-weight: 300;
    line-height: 1.4;
    margin-bottom: 15px;

    @media (min-width: $screen-sm-min) {
        font-size: ($font-size-base * 1.2);
    }

    &.text-small {
        font-size: $font-size-base;
    }
    &.link {
        margin-bottom: 0;
    }
}

label.lead {
    margin-bottom: 0;
}

.content-text,
.postcontent {
    margin: 10px 0;
}


.metadata {
    font-family: $font-family-sans-serif;
    font-size: 0.8em;
    color: #555;
    .title & {
        margin-left: 5px;
    }
}

.license {
    margin: 10px 0;
    .license-icon {
        padding-right: 10px;
    }
}

.licenseicon {
    padding: 0 10px 5px 0;
}

